# takehome

./: pyproject.toml  stars.py
