[tool.poetry]
name = "takehome"
version = "0.1.0"
description = ""
authors = ["richiestuver <richiestuver@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygithub = "^2.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
